Bug 155368 - Can't toggle Wrap Text on all cells if a cell already has it
Summary: Can't toggle Wrap Text on all cells if a cell already has it
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
7.5.0.0 alpha0+
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.6.0 target:7.5.5
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Calc-Cells
  Show dependency treegraph
 
Reported: 2023-05-17 11:35 UTC by stragu
Modified: 2026-04-03 23:52 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
minimal example ODS (9.89 KB, application/vnd.oasis.opendocument.spreadsheet)
2023-05-17 11:35 UTC, stragu
Details

Note You need to log in before you can comment on or make changes to this bug.
Description stragu 2023-05-17 11:35:39 UTC
Created attachment 187350 [details]
minimal example ODS

Steps to reproduce:

1. Open attachment
2. Select all (top left corner or Ctrl + A)
3. Try toggling Wrap Text (from Format > Text > Wrap Text, or from toolbar)

Result: no toggling.

Can also reproduce from scratch: enter data in A1, apply Text Wrap to cell, select all, try to toggle.

Bibisected with linux-64-7.5 repo to first bad commit 9bbe835ae76014760a6abfe10b7e50874a5ea2fa which points to core commit:

commit ac859a4c6a7fce4efee9cdd45821a0c9e40e9e9a
author	Noel Grandin <noel.grandin@collabora.co.uk>	Mon Oct 17 16:36:23 2022 +0200
committer	Noel Grandin <noel.grandin@collabora.co.uk>	Tue Oct 18 09:35:01 2022 +0200
tdf#147842 shrink selection to data area when applying to entire sheet
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/141463

Noel, can you please also have a look at this one? Not sure if https://gerrit.libreoffice.org/c/core/+/151873 has any impact on this.

Repro on:

Version: 7.6.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: 1349f140fcc49e5da78482ca3db09663ccdae0a9
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded
Comment 1 Noel Grandin 2023-05-21 19:21:56 UTC
fix at https://gerrit.libreoffice.org/c/core/+/152074
Comment 2 Commit Notification 2023-05-22 06:05:45 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/8cc51cf9886a1e2f185c3824b71c960c08a9bf2e

tdf#155368 Can't toggle Wrap Text on all cells if cell already has

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2023-05-22 12:09:29 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/9494b7d3602aeccec0e434219c71a8b0223dfe82

tdf#155368 Can't toggle Wrap Text on all cells if cell already has

It will be available in 7.5.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2023-05-22 13:48:41 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/e34bb6e67aefde2fa1e7e12635a016a2076a11bd

tdf#155368: sc_subsequent_export: Add unittest

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 stragu 2023-05-25 09:49:55 UTC
Verified fix in:

Version: 7.6.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: f3aab159f1c1e00c25e6b4ca1e50813bc343f4f3
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

Thank you Noel! Thanks for the test, Xisco!