tdf#155368 Can't toggle Wrap Text on all cells if cell already has

The problem is not so much that we cannot toggle, it is that we
cannot unset a toggle property.
And the reason for that, is that the state of the toggle never
goes off because the view state as computed by
ScViewFunc::GetSelectionPattern is different
from the state that is seen in ScViewFunc::ApplySelectionPattern
where we apply the pattern.

So make the same shrink-data-area adjustment in GetSelectionPattern.

Change-Id: Ic56145ee98ead931278767851f74e0ce7422a150
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/152074
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>
(cherry picked from commit 8cc51cf9886a1e2f185c3824b71c960c08a9bf2e)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/152092
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>